Update image reference to include docker.io

--- a/Kubernetes/gokubernetes.yaml
+++ b/Kubernetes/gokubernetes.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: gowebapi
-        image: adminturneddevops/gowebapi:latest
+        image: docker.io/adminturneddevops/gowebapi:latest
         ports:
         - containerPort: 8080
 ---
